--- a/css/style.css
+++ b/css/style.css
@@ -139,13 +139,23 @@
   color: grey;
 }
 
-.hoppy h3 {
+.hobby h3 {
   font-size: 30px;
   font-weight: normal;
 }
 
-.hoppy p {
+.hobby p {
+  font-size: 16px;
+  font-weight: normal;
+  font-style: inherit;
+}
+.langue h2 {
   font-size: 30px;
+  font-weight: normal;
+}
+
+.langue p {
+  font-size: 14px;
   font-weight: normal;
   font-style: inherit;
 }
