--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,18 @@
   padding-left: 30px;
 }
 
-button {
+.telecharg{
+  color: aliceblue;
+  text-decoration: none;
+}
+
+.telecharg:hover{
+  background-color: black;
+  text-decoration: none;
+  color: aliceblue;
+}
+
+button{
   font-size: 25px;
   padding: 10px 20px;
   background-color: gray;
